# CiteBot

./: .env.example  .gitignore  CLAUDE.md  README.md  README_zh.md  pyproject.toml  requirements.txt
citebot/: __init__.py  bib_generator.py  cite_inserter.py  config.py  filter_ranker.py  keyword_extractor.py  latex_parser.py  literature_searcher.py  main.py  pipeline.py  types.py
tests/: conftest.py  test_bib_generator.py  test_cite_inserter.py  test_filter_ranker.py  test_keyword_extractor.py  test_latex_parser.py  test_literature_searcher.py  test_multi_file.py  test_pipeline.py
tests/fixtures/: sample.tex
